make top and side navbar collapse, fix hello to screen sizing

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -10,16 +10,30 @@ body {
 	background-color: #000000;
 	background-image: url("data:image/svg+xml,%3Csvg width='70' height='70' viewBox='0 0 70 70' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23171d1d' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M0 0h35v35H0V0zm5 5h25v25H5V5zm5 5h15v15H10V10zm5 5h5v5h-5v-5zM40 5h25v25H40V5zm5 5h15v15H45V10zm5 5h5v5h-5v-5zM70 35H35v35h35V35zm-5 5H40v25h25V40zm-5 5H45v15h15V45zm-5 5h-5v5h5v-5zM30 40H5v25h25V40zm-5 5H10v15h15V45zm-5 5h-5v5h5v-5z'/%3E%3C/g%3E%3C/svg%3E");
 }
+
+button {
+	color: rgb(74, 250, 250);
+	background-color: transparent;
+	border: 0;
+	width: 100%;
+	text-align: right;
+	padding-right: 10px;
+}
+
+button:hover {
+	color: white;
+}
+
 .bottom-container,
 .top-container {
-	width: 60vw;
-	height: 35vh;
+	width: 70vw;
+	height: 40vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	position: absolute;
 	top: 35vh;
-	left: 10vw;
+	right: 0;
 	padding: 1vw;
 }
 
@@ -60,11 +74,19 @@ a:hover {
 }
 
 main {
-	margin-left: 160px;
 	position: relative;
 }
 
-.sidenav {
+.sidenav.active + main {
+	margin-left: 0;
+}
+
+#toggle {
+	font-size: 15px;
+}
+
+.sidenav.active {
+	display: block;
 	height: 100%;
 	width: 160px;
 	position: fixed;
@@ -75,6 +97,19 @@ main {
 	overflow-x: hidden;
 	padding-top: 20px;
 	text-align: center;
+}
+
+.sidenav,
+.topnav,
+.top {
+	display: none;
+}
+
+.side.out {
+	position: fixed;
+	text-align: left;
+	padding-left: 10px;
+	padding-top: 15px;
 }
 
 .sidenav a {
@@ -338,7 +373,12 @@ video {
 }
 
 @media (max-width: 800px) {
-	.topnav {
+	button {
+		position: absolute;
+	}
+
+	.topnav.active {
+		display: block;
 		height: 50px;
 		width: 100%;
 		position: fixed;
@@ -349,6 +389,41 @@ video {
 		overflow-x: hidden;
 		padding-top: 10px;
 		text-align: center;
+	}
+
+	.topnav {
+		display: hidden;
+	}
+
+	.topnav.active .top {
+		display: block;
+		margin-top: -40px;
+	}
+
+	.topnav.active .top.out {
+		display: none;
+	}
+
+	.topnav.active .top i {
+		font-size: 12px;
+		padding-right: 8px;
+		padding-top: 5px;
+	}
+
+	.top.out {
+		display: block;
+		margin-top: 10px;
+		margin-right: 30px;
+	}
+
+	.top.out i {
+		position: fixed;
+		right: 0;
+		padding-right: 15px;
+	}
+
+	#toggle.side {
+		opacity: 0;
 	}
 
 	h3 {
@@ -371,8 +446,13 @@ video {
 		width: 0px;
 	}
 
-	main {
+	.topnav.active main {
 		margin-top: 100px;
+		margin-left: 0px;
+		position: relative;
+	}
+	main {
+		margin-top: 0;
 		margin-left: 0px;
 		position: relative;
 	}
@@ -417,5 +497,28 @@ video {
 
 	h2 {
 		font-size: 15px;
+	}
+
+	.bottom-container,
+	.top-container {
+		width: 85vw;
+		height: 40vh;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		position: absolute;
+		top: 35vh;
+		right: 0;
+		padding: 1vw;
+	}
+
+	@keyframes circleMove {
+		0%,
+		100% {
+			clip-path: circle(20% at 80% 50%);
+		}
+		50% {
+			clip-path: circle(20% at 20% 50%);
+		}
 	}
 }
